# Traffic-optimization-BT-CCP-SPP-GP

./: README.md  app.py  datos.py  motor_sim.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: demanda.db  escenarios.db  infraestructura.db
data/schema/: 1_infraestructura.sql  2_demanda.sql  3_escenarios.sql
docs/: ARQUITECTURA_TECNICA.md  FORMATO_INSUMOS.md  PLAN_IMPLEMENTACION.md
fuentes/plantillas_csv/: campanias_medicion.csv  escenarios_base.csv  eventos_barrera.csv  itinerario_versiones.csv  llegadas_vehiculares.csv  modelo_operacional_cruce.csv  planes_horarios_cruce.csv  programacion_fases.csv  versiones_programacion.csv
pages/: 1_Simulacion.py  2_Mapa.py  3_Comparacion.py  4_Validacion.py
scripts/: aplicar_extensiones_db.py  generar_plantillas_csv.py  importar_insumos_tabulares.py  migrar_xlsx.py  validar_bases.py
src/modelo_cruces/: config.py
src/modelo_cruces/core/: models.py  trace_map.py
src/modelo_cruces/data/: db.py
src/modelo_cruces/importers/: tabular.py  templates.py
src/modelo_cruces/validation/: validators.py
tests/: test_validacion.py  test_validadores.py
